vm/snapshots/vm-primitives-int_zero_modulo-IntZeroModuloShouldThrowErrMain.class.snap
---
source: vm/src/main.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArithmeticException: / by zero
	at primitives.int_zero_modulo.IntZeroModuloShouldThrowErrMain.main(IntZeroModuloShouldThrowErrMain.java:5)
