vm/snapshots/vm-primitives-integer-arithmetic_ok-IntArithmeticOkMain.class.snap
---
source: vm/src/main.rs
expression: combined
---
----- STDOUT -----
All assertions passed.
----- STDERR -----
