vm/snapshots/vm-primitives-integer-zero_division-IntZeroDivisionShouldThrowErrMain.class.snap
---
source: vm/src/main.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArithmeticException: / by zero
	at primitives.integer.zero_division.IntZeroDivisionShouldThrowErrMain.main(IntZeroDivisionShouldThrowErrMain.java:5)
